# fortress

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  AGENTS.md  CHROMIUM_VERSION  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTENT.md  LICENSE  NOTICE  README.md  SECURITY.md  j1.yaml  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: BENCHMARK.md  BUILD_NATIVE.md  GAUNTLET_RESULTS.md  PERSONA_ENGINE.md  gauntlet-sample.json
examples/: README.md  scrape_demos.py
mcp/: README.md  benchmark_tokens.py  server.json
packaging/: Dockerfile  build-bundle.sh  build-deb.sh  bundle-README.txt  docker-entrypoint.sh  fonts.conf.template  tilion  tilion.cmd
patches/: 0001-base-BUILD-gn.patch  0002-base-uxr_config-cc.patch  0003-base-uxr_config-h.patch  0004-components-embedder_support-user_agent_utils-cc.patch  0005-content-browser-renderer_host-render_process_host_impl-cc.patch  0006-content-common-renderer-mojom.patch  0007-content-renderer-render_thread_impl-cc.patch  0008-content-renderer-render_thread_impl-h.patch  0009-content-renderer-renderer_main-cc.patch  0010-third_party-blink-renderer-core-dom-element-cc.patch  0011-third_party-blink-renderer-core-execution_context-navigator_base-cc.patch  0012-third_party-blink-renderer-core-frame-local_dom_window-cc.patch  0013-third_party-blink-renderer-core-frame-navigator-cc.patch  series  (+22 more)
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_sdk.py
sdk/python/tilion_fortress/: __init__.py  __main__.py
sdk/python/tilion_fortress.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+26 files in other folders)
